Codegenie_NodeJS/Codegenie_NodeJS/public/stylesheets/form.css
.horizontal {
    margin-top: 30px;
    overflow: hidden
}

 .big-checkbox, .horizontal label{
    font-size: 16px;
 }
 .big-checkbox input {
      width: 16px; height: 16px;
 }

.checkbox-inline, .horizontal label {
        margin-top: 6px;
}

.top-10 {
    margin-top: 10px;
}

.top-20 {
    margin-top: 20px;
}

.top-30 {
    margin-top: 30px;
}

.left-30 {
    margin-left: 30px;
}

.right-30{
    margin-right: 30px;
}

